ansible/example-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: example-route
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: example-gateway
      namespace: default
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: example-service
          port: 80
          weight: 10
